--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/DilipTD/Keyence-PLC.git"
+        "url": "https://github.com/DilipTD/keyence-plc.git"
     },
     "node-red": {
         "nodes": {
